--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -84,89 +84,16 @@
 
                     <LinearLayout
                         android:id="@+id/infoBarLayout"
-                        android:layout_width="fill_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/selectorList"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scrollbars="vertical" />
 
-                            <Spinner
-                                android:id="@+id/drop1prefix"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/drop1"
-                                android:textColor="@color/s_text"
-                                android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/drop1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:maxLines="1"
-                                android:paddingLeft="10dp"
-                                android:textColor="#000000"
-                                android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <Spinner
-                                android:id="@+id/drop2prefix"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/drop2"
-                                android:textColor="@color/s_text"
-                                android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/drop2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:maxLines="1"
-                                android:paddingLeft="10dp"
-                                android:textColor="#000000"
-                                android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <Spinner
-                                android:id="@+id/drop3prefix"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/drop3"
-                                android:textColor="@color/s_text"
-                                android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/drop3"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:maxLines="1"
-                                android:paddingLeft="10dp"
-                                android:textColor="#000000"
-                                android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -226,9 +153,9 @@
                                 android:id="@+id/traitDetails"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
+                                android:ellipsize="end"
                                 android:gravity="center"
                                 android:maxLines="1"
-                                android:ellipsize="end"
                                 android:text="@string/traitdetails"
                                 android:textColor="#000000"
                                 android:textSize="@dimen/text_size_small"
@@ -472,6 +399,6 @@
         android:layout_gravity="start"
         android:background="@android:color/white"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_drawer_view"/>
+        app:menu="@menu/nav_drawer_view" />
 
-</androidx.core.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
