Additional vector icons Changed selector background color to white

--- a/app/src/main/res/layout/selector_dropdown.xml
+++ b/app/src/main/res/layout/selector_dropdown.xml
@@ -3,6 +3,7 @@
     android:id="@+id/selector"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     android:orientation="horizontal">
 
     <Spinner
