--- a/app/src/main/res/layout/dialog_export.xml
+++ b/app/src/main/res/layout/dialog_export.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/format"
+                android:text="@string/traits_create_format"
                 android:textColor="@color/s_text"
                 android:textSize="@dimen/text_size_medium"
                 android:textStyle="bold" />
@@ -101,7 +101,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/traits"
+                        android:text="@string/settings_traits"
                         android:textColor="@color/s_text"
                         android:textSize="@dimen/text_size_medium"
                         android:textStyle="bold" />
@@ -180,7 +180,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/okay"
+            android:text="@string/dialog_ok"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
@@ -191,7 +191,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/close"
+            android:text="@string/dialog_close"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
