--- a/app/src/main/res/layout/dialog_person.xml
+++ b/app/src/main/res/layout/dialog_person.xml
@@ -13,7 +13,7 @@
         android:id="@+id/firstName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/firstname"
+        android:hint="@string/profile_name_first"
         android:inputType="textCapSentences"
         android:maxLength="200"
         android:paddingLeft="5dp"
@@ -26,7 +26,7 @@
         android:id="@+id/lastName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/lastname"
+        android:hint="@string/profile_name_last"
         android:inputType="textCapSentences"
         android:maxLength="200"
         android:paddingLeft="5dp"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/okay"
+            android:text="@string/dialog_ok"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
