--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,7 +152,7 @@
                             android:gravity="center"
                             android:maxLines="1"
                             android:ellipsize="end"
-                            android:text="@string/traitdetails"
+                            android:text="@string/main_trait_details"
                             android:textColor="#000000"
                             android:textSize="@dimen/text_size_small"
                             android:textStyle="bold" />
@@ -194,7 +194,7 @@
                                         android:layout_gravity="center_vertical"
                                         android:gravity="right"
                                         android:paddingRight="10dp"
-                                        android:text="@string/range"
+                                        android:text="@string/search_results_dialog_range"
                                         android:textColor="@color/s_text"
                                         android:textSize="@dimen/text_size_xlarge"
                                         android:textStyle="bold" />
@@ -232,7 +232,7 @@
                                         android:layout_gravity="center_vertical"
                                         android:gravity="right"
                                         android:paddingRight="10dp"
-                                        android:text="@string/plot"
+                                        android:text="@string/search_results_dialog_plot"
                                         android:textColor="@color/s_text"
                                         android:textSize="@dimen/text_size_xlarge"
                                         android:textStyle="bold" />
