--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/field_count"
         android:layout_centerHorizontal="true"
-        android:text="@string/close"
+        android:text="@string/dialog_close"
         android:textColor="#000000"
         android:textSize="@dimen/text_size_small"
         android:textStyle="bold" />
