--- a/app/src/main/res/layout/dialog_location.xml
+++ b/app/src/main/res/layout/dialog_location.xml
@@ -13,7 +13,7 @@
         android:id="@+id/latitude"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/longitude"
+        android:hint="@string/profile_location_longitude"
         android:maxLength="200"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -26,7 +26,7 @@
         android:id="@+id/longitude"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/latitude"
+        android:hint="@string/profile_location_latitude"
         android:maxLength="200"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/getlocation"
+            android:text="@string/profile_location_get"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/okay"
+            android:text="@string/dialog_ok"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
