--- a/app/src/main/res/layout/dialog_new_trait.xml
+++ b/app/src/main/res/layout/dialog_new_trait.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="left|center_vertical"
             android:layout_weight=".2"
             android:paddingRight="10dp"
-            android:text="@string/format"
+            android:text="@string/traits_create_format"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/trait"
+            android:text="@string/traits_create_trait"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/def"
+            android:text="@string/traits_create_value_default"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -107,8 +107,8 @@
             android:id="@+id/boolBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textOff="@string/falsevalue"
-            android:textOn="@string/truevalue"
+            android:textOff="@string/traits_create_false"
+            android:textOn="@string/traits_create_true"
             android:textSize="@dimen/text_size_small"
             android:visibility="gone" />
     </LinearLayout>
@@ -128,7 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/minimum"
+            android:text="@string/traits_create_value_minimum"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -160,7 +160,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/maximum"
+            android:text="@string/traits_create_value_maximum"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -193,7 +193,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/details"
+            android:text="@string/traits_create_details"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -225,7 +225,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/categories"
+            android:text="@string/traits_create_categories_title"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
@@ -235,7 +235,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:hint="@string/catseparator"
+            android:hint="@string/traits_create_categories_text"
             android:imeOptions="actionNext"
             android:inputType="textCapWords"
             android:paddingRight="10dp"
@@ -262,7 +262,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/close"
+            android:text="@string/dialog_close"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
@@ -272,7 +272,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/save"
+            android:text="@string/dialog_save"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
