--- a/app/src/main/res/layout/dialog_search_results.xml
+++ b/app/src/main/res/layout/dialog_search_results.xml
@@ -17,7 +17,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="#000000"
-            android:text="@string/range"
+            android:text="@string/search_results_dialog_range"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
@@ -28,7 +28,7 @@
             android:layout_weight="1"
             android:textColor="#000000"
             android:gravity="center"
-            android:text="@string/plot"
+            android:text="@string/search_results_dialog_plot"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/close"
+            android:text="@string/dialog_close"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
