--- a/app/src/main/res/layout/selector_dropdown.xml
+++ b/app/src/main/res/layout/selector_dropdown.xml
@@ -10,7 +10,7 @@
         android:id="@+id/selectorSpinner"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="@string/drop1"
+        android:text="@string/main_infobar_title"
         android:textColor="@color/s_text"
         android:textSize="@dimen/text_size_xlarge"
         android:textStyle="bold" />
