--- a/app/src/main/res/menu/menu_field_listitem.xml
+++ b/app/src/main/res/menu/menu_field_listitem.xml
@@ -3,10 +3,10 @@
 
     <item
         android:id="@+id/delete"
-        android:title="@string/delete"/>
+        android:title="@string/fields_delete"/>
 
     <item
         android:id="@+id/stats"
-        android:title="@string/statistics"/>
+        android:title="@string/fields_study_statistics"/>
 
 </menu>
