--- a/app/src/main/res/menu/menu_trait_listitem.xml
+++ b/app/src/main/res/menu/menu_trait_listitem.xml
@@ -3,14 +3,14 @@
 
     <item
         android:id="@+id/copy"
-        android:title="@string/copy"/>
+        android:title="@string/traits_options_copy"/>
 
     <item
         android:id="@+id/delete"
-        android:title="@string/delete"/>
+        android:title="@string/traits_options_delete"/>
 
     <item
         android:id="@+id/edit"
-        android:title="@string/edit"/>
+        android:title="@string/traits_options_edit"/>
 
 </menu>
